--- a/templates/portfolios/transactions/index_global_paged_content.html
+++ b/templates/portfolios/transactions/index_global_paged_content.html
@@ -26,7 +26,7 @@
   {% endfor %}
   </tbody>
   <tfoot>
-    <tr>
+    <tr class="footer">
       <td colspan="5">
         {% include "common/list_pagination.html" %}
       </td>
