--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -378,7 +378,12 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   font-weight: normal;
 }
 
-.table tfoot .footer .helper { padding-left: 3px; }
+.table tfoot .footer .helper {
+  padding-left: 3px;
+  height: 40px;
+  line-height: 40px;
+  vertical-align: middle;
+}
 
 .table tfoot .footer .pagination {
   margin: 0px;
