--- a/templates/portfolios/transactions/index_paged_content.html
+++ b/templates/portfolios/transactions/index_paged_content.html
@@ -5,12 +5,12 @@
 <table class="table table-striped table-striped-white table-hover table-condensed table-bordered">
   <thead>
     <tr>
-      <th style="width: 15%">Date</th>
-      <th style="width: 15%">Type</th>
-      <th style="width: 15%" class="align-right">Quantity</th>
-      <th style="width: 15%" class="align-right">Price</th>
-      <th style="width: 15%" class="align-right">Commission</th>
-      <th style="width: 25%">Comment</th>
+      <th style="width: 12%">Date</th>
+      <th style="width: 12%">Type</th>
+      <th style="width: 12%" class="align-right">Quantity</th>
+      <th style="width: 12%" class="align-right">Price</th>
+      <th style="width: 12%" class="align-right">Commission</th>
+      <th style="width: 60%">Comment</th>
     </tr>
   </thead>
   {% if transactions %}
@@ -20,7 +20,6 @@
   <tr>
     <td>{{ transaction.date_transacted|date:"m/d/Y" }}</td>
     <td>{{ transaction.get_type_display }}</td>
-    <td>{{ transaction.holding.stock.name }} ({{ transaction.holding.stock.symbol }}:{{ transaction.holding.stock.market.acr }})</td>
     <td class="align-right">{{ transaction.quantity }}</td>
     <td class="align-right">${{ transaction.value|floatformat:2 }}</td>
     <td class="align-right">${{ transaction.commission|floatformat:2 }}</td>
@@ -29,8 +28,8 @@
   {% endfor %}
   </tbody>
   <tfoot>
-    <tr>
-      <td colspan="7">
+    <tr class="footer">
+      <td colspan="6">
         {% include "common/list_pagination.html" %}
       </td>
     </tr>
