--- a/templates/admin/markets/stocks/index.html
+++ b/templates/admin/markets/stocks/index.html
@@ -1,44 +1,20 @@
 {% extends "base_two_columns.html" %}
+{% load endless %}
 
 {% block browser_title %}Stocks - Admin{% endblock browser_title %}
+
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; Stocks{% endblock breadcrumbs %}
 
 {% block page_title %}Stocks{% endblock page_title %}
 
 {% block content %}
 
-{% if stocks %}
-<table class="table table-striped table-striped-white table-hover table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Symbol</th>
-      <th>Market</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for stock in stocks %}
-    <tr>
-      <td>{{ stock.name }}</td>
-      <td>{{ stock.symbol }}</td>
-      <td>{{ stock.market.acr }}</td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
-
-<div class="pagination">
-  <span class="step-links">
-    {% if stocks.has_previous %}
-      <a href="?page={{ stocks.previous_page_number }}">Previous</a>
-    {% endif %}
-    <span class="current">
-      Page {{ stocks.number }} of {{ stocks.paginator.num_pages }}.
-    </span>
-    {% if stocks.has_next %}
-      <a href="?page={{ stocks.next_page_number }}">Next</a>
-    {% endif %}
-  </span>
+<div id="paginate" class="endless_page_template">
+  {% include page_template %}
 </div>
-{% endif %}
 
 {% endblock content %}
+
+{% block script %}
+  {% include "common/list_pagination_script.html" %}
+{% endblock script %}
