--- a/templates/admin/markets/stocks/index.html
+++ b/templates/admin/markets/stocks/index.html
@@ -9,6 +9,12 @@
 
 {% block content %}
 
+<form method="post" action="">
+  {% csrf_token %}
+  {{ search_form.as_p }}
+  <input type="submit" value="Search" class="btn">
+</form>
+
 <div id="paginate" class="endless_page_template">
   {% include page_template %}
 </div>
