--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -348,6 +348,8 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 .table-bordered td,
 .table-bordered th { border-left-color: #c4c4c4; }
 
+.table-clickable tbody tr { cursor: pointer; }
+
 .table tfoot .total th {
   padding-top: 4px;
   padding-bottom: 4px;
