--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 {% if holdings %}
-<table class="table table-striped table-striped-white table-hover table-bordered">
+<table class="table table-striped table-striped-white table-hover table-bordered table-clickable">
   <thead>
     <tr>
       <th>Name</th>
@@ -26,7 +26,7 @@
     <tr>
       <td>
         <a class="large" href="{% url 'transaction_index' portfolio.id holding.id %}">{{ holding.stock_symbol }}:{{ holding.market_code }}</a><br />
-        <a href="{% url 'transaction_index' portfolio.id holding.id %}">{{ holding.stock_name }}</a>
+        {{ holding.stock_name }}
       </td>
       <td class="align-right"><span class="medium">
         ${{ holding.last_price|floatformat:2|intcomma }}</span><br />
@@ -66,6 +66,14 @@
 {% else %}
 <p>You currently have no holdings in this portfolio - <a href="{% url 'holding_create' portfolio.id %}">go ahead and add some now!</a></p>
 {% endif %}
+
+<p>&nbsp;</p>
+
+{% if holdings %}
+<pre>
+var chart =
+</pre>
+{% endif %}
 {% endblock content %}
 
 {% block sidebar %}
@@ -83,22 +91,23 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/flot/jquery.flot.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/flot/jquery.flot.pie.js"></script>
 <script type="text/javascript">
-{#    var data = [],#}
-{#			series = Math.floor(Math.random() * 6) + 3;#}
-{##}
-{#		for (var i = 0; i < series; i++) {#}
-{#			data[i] = {#}
-{#				label: "Series" + (i + 1),#}
-{#				data: Math.floor(Math.random() * 100) + 1#}
-{#			}#}
-{#		}#}
+  $(document).ready(function() {
+      $('table.table-clickable tbody tr').click(function() {
+          var href = $(this).find("a").attr("href");
+          if(href) {
+              window.location = href;
+          }
+      });
+  });
 
-		var data = [
-			{ label: "BNS:TSX",  data: 3.08},
-			{ label: "BB:TSX",  data: 12.34},
-			{ label: "RY:TSX",  data: 80.67},
-			{ label: "YHOO:NASDAQ",  data: 3.91}
-		];
+    var data = {{ holding_chart|safe }};
+
+{#		var data = [#}
+{#			{'label': 'BNS:TSX',  'data': 3.08},#}
+{#			{'label': 'BB:TSX', 'data': 12.34},#}
+{#		  {'label': 'RY:TSX', 'data': 80.67},#}
+{#			{'label': 'YHOO:NASDAQ', 'data': 3.91}#}
+{#		];#}
 
     $.plot('#holdings-chart', data, {
         series: {
@@ -107,17 +116,17 @@
                 innerRadius: 0.4,
                 radius: 1,
                 stroke: {
-												color: '#fff',
-												width: 2
+								    color: '#fff',
+										width: 2
                 },
                 grow: {
                     active: false
                 },
                 startAngle: 2,
                 combine: {
-												color: '#353535',
-												threshold: 0.04
-										},
+										color: '#353535',
+										threshold: 0.04
+								},
                 label: {
                     show: true,
                     radius: 3/4,
@@ -126,7 +135,7 @@
                     },
                     background: {
                         opacity: 0.5,
-                        color: '#000'
+                       color: '#000'
                     }
                 }
             }
