--- a/templates/common/list_pagination.html
+++ b/templates/common/list_pagination.html
@@ -9,18 +9,18 @@
 {#      Page: <input type="text" value="{{ pages.current.number }}" /> of {{ pages.last.number }}#}
   <div class="btn-group">
     {% if not pages.current.is_first %}
-    <a href="{{ pages.1.path }}" rel="page" class="btn endless_page_link" title="First"><b>First</b></a>
-    <a href="{{ pages.previous.path }}" rel="page" class="btn endless_page_link" title="Previous"><b>Previous</b></a>
+    <a href="{{ pages.1.path }}" rel="page" class="btn endless_page_link" title="First"><i class="icon-double-angle-left"></i></a>
+    <a href="{{ pages.previous.path }}" rel="page" class="btn endless_page_link" title="Previous"><i class="icon-angle-left"></i></a>
     {% else %}
-    <a href="javascript:void(0);" rel="page" class="btn disabled" title="First"><b>First</b></a>
-    <a href="javascript:void(0);" rel="page" class="btn disabled" title="Previous"><b>Previous</b></a>
+    <a href="javascript:void(0);" rel="page" class="btn disabled" title="First"><i class="icon-double-angle-left"></i></a>
+    <a href="javascript:void(0);" rel="page" class="btn disabled" title="Previous"><i class="icon-angle-left"></i></a>
     {% endif %}
     {% if not pages.current.is_last %}
-    <a href="{{ pages.next.path }}" rel="page" class="btn endless_page_link" title="Next"><b>Next</b></a>
-    <a href="{{ pages.last.path }}" rel="page" class="btn endless_page_link" title="Last"><b>Last</b></a>
+    <a href="{{ pages.next.path }}" rel="page" class="btn endless_page_link" title="Next"><i class="icon-angle-right"></i></a>
+    <a href="{{ pages.last.path }}" rel="page" class="btn endless_page_link" title="Last"><i class="icon-double-angle-right"></i></a>
     {% else %}
-    <a href="javascript:void(0);" class="btn disabled"><b>Next</b></a>
-    <a href="javascript:void(0);" class="btn disabled"><b>Last</b></a>
+    <a href="javascript:void(0);" class="btn disabled"><i class="icon-angle-right"></i></a>
+    <a href="javascript:void(0);" class="btn disabled"><i class="icon-double-angle-right"></i></a>
     {% endif %}
   </div>
 </div>
