--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,7 @@
 {% block browser_title %}Home{% endblock browser_title %}
 
 {% if user.is_authenticated %}
-{% block page_title %}Dashboard <small>Subtitle</small>{% endblock page_title %}
+{% block page_title %}<i class="icon-dashboard"></i> Dashboard <small>Subtitle</small>{% endblock page_title %}
 {% endif %}
 
 {% block content %}
