--- a/templates/portfolios/transactions/index_global.html
+++ b/templates/portfolios/transactions/index_global.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; Transactions</a>{% endblock breadcrumbs %}
 
-{% block page_title %}Transactions{% endblock page_title %}
+{% block page_title %}<i class="icon-list"></i> Transactions{% endblock page_title %}
 
 {% block content %}
 
@@ -26,67 +26,8 @@
   </div>
 </div>
 
-<div class="widget widget-simple">
-  <div class="widget-header">
-    <h4>Optional title of widget <small>subtitle</small></h4>
-  </div>
-  <div class="widget-body">
-    <div class="widget-row">
-      This is a row
-    </div>
-    <div class="widget-row">
-      This is a row
-    </div>
-    <div class="widget-row">
-      This is a row
-    </div>
-  </div>
-  <div class="widget-footer">
-    Footer
-  </div>
-</div>
-
-<div class="widget">
-  <div class="widget-header">
-    <h4>Optional title of widget <small>subtitle</small></h4>
-  </div>
-  <div class="widget-body">
-    <p>Lorem ipsum dolor sit amet consectetuer pede tempor ligula sem tempus. A nascetur gravida parturient est Aenean facilisis In est consectetuer Nam. Adipiscing odio tincidunt ac ornare pellentesque metus diam laoreet sollicitudin vel.</p>
-  </div>
-  <div class="widget-footer">
-    Footer
-  </div>
-</div>
-
-<div class="widget widget-simple">
-  <div class="widget-header">
-    <h4>Optional title of widget <small>subtitle</small></h4>
-  </div>
-  <div class="widget-body">
-    <ul>
-      <li>Item row 1</li>
-      <li>Item row 2</li>
-      <li>Item row 3</li>
-      <li>Item row 4</li>
-    </ul>
-  </div>
-</div>
-
-<div class="widget widget-simple">
-  <div class="widget-header">
-    <h4>Optional title of widget <small>subtitle</small></h4>
-  </div>
-  <div class="widget-body">
-    <ul class="dotted">
-      <li>Item row 1</li>
-      <li>Item row 2</li>
-      <li>Item row 3</li>
-      <li>Item row 4</li>
-    </ul>
-  </div>
-</div>
 {% endblock sidebar %}
 
 {% block script %}
-  {% include "common/list_pagination_script.html" %}
+{% include "common/list_pagination_script.html" %}
 {% endblock script %}
