--- a/templates/portfolios/transactions/index_global_paged_content.html
+++ b/templates/portfolios/transactions/index_global_paged_content.html
@@ -5,11 +5,13 @@
 <table class="table table-striped table-striped-white table-hover table-condensed table-bordered">
   <thead>
     <tr>
-      <th style="width: 15%">Date</th>
-      <th style="width: 15%">Type</th>
-      <th style="width: 40%">Holding</th>
-      <th style="width: 15%" class="align-right">Quantity</th>
-      <th style="width: 15%" class="align-right">Price</th>
+      <th style="width: 10%">Date</th>
+      <th style="width: 10%">Type</th>
+      <th style="width: 25%">Holding</th>
+      <th style="width: 10%" class="align-right">Quantity</th>
+      <th style="width: 10%" class="align-right">Price</th>
+      <th style="width: 10%" class="align-right">Commission</th>
+      <th style="width: 25%">Comment</th>
     </tr>
   </thead>
   {% if transactions %}
@@ -22,12 +24,14 @@
     <td>{{ transaction.holding.stock.name }} ({{ transaction.holding.stock.symbol }}:{{ transaction.holding.stock.market.acr }})</td>
     <td class="align-right">{{ transaction.quantity }}</td>
     <td class="align-right">${{ transaction.value|floatformat:2|intcomma }}</td>
+    <td class="align-right">${{ transaction.commission|floatformat:2|intcomma }}</td>
+    <td>{{ transaction.comment|default_if_none:"" }}</td>
   </tr>
   {% endfor %}
   </tbody>
   <tfoot>
     <tr class="footer">
-      <td colspan="5">
+      <td colspan="7">
         {% include "common/list_pagination.html" %}
       </td>
     </tr>
