--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
   <div class="header">
     <div class="container clearfix">
       <div class="title">
-        <img src="{{ STATIC_URL }}img/portfolioapp-logo-270x57.png" width="270px" height="57px" />
+        <a href="/"><img src="{{ STATIC_URL }}img/portfolioapp-logo-270x57.png" width="270px" height="57px" /></a>
       </div>
       <div class="utilities">
         <ul class="nav nav-pills pull-right">
