--- a/templates/common/main_navigation.html
+++ b/templates/common/main_navigation.html
@@ -2,7 +2,7 @@
 
 <ul class="nav">
   {% if user.is_authenticated %}
-  <li class="{% navactive request "home_index" %}"><a href="{% url "home_index" %}">Dashboard</a></li>
+  <li class="{% navactive request "dashboard_index" %}"><a href="{% url "dashboard_index" %}">Dashboard</a></li>
   <li class="{% navactive request "portfolio_index holding_index transaction_index" %}"><a href="/portfolios">Portfolios</a></li>
   <li class="{% navactive request "transaction_global_index" %}"><a href="/transactions">Transactions</a></li>
   {% else %}
