--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,6 +173,10 @@ section.body .main h2 {
   border-bottom: 1px solid #bbbbbb;
 }
 
+.widget.widget-stats .widget-header {
+  border-bottom: none;
+}
+
 .widget .widget-header h3,
 .widget .widget-header h4 {
   margin: 0px;
@@ -213,6 +217,36 @@ section.body .main h2 {
 .widget .widget-body ul li:last-child {
   padding-bottom: 5px;
   border-bottom: none;
+}
+
+.widget-stats {
+  background-color: #f4f4f5;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
+}
+
+.widget-stats .widget-header {
+  padding: 10px;
+}
+
+.widget-stats .widget-body {
+  padding-top: 0px;
+}
+
+.widget-stats .widget-body:before,
+.widget-stats .widget-body:after,
+.widget-stats .stats-row:before,
+.widget-stats .stats-row:after { display:table; content:""; line-height:0; }
+.widget-stats .widget-body:after,
+.widget-stats .stats-row:after { clear:both; }
+
+.widget-stats .stats-label {
+  float: left;
+  padding: 
+}
+
+.widget-stats .stats-value {
+  float: right;
 }
 
 .widget .widget-footer {
