--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
           {% endif %}
           {% if user.is_authenticated %}
           <li><a href="{% url 'profile_edit' %}">{{ user.get_full_name }}</a></li>
-          <li><a href="{% url 'profile_signout' %}">Sign out</a></li>
+          <li><a href="{% url 'profile_signout' %}">Sign out <i class="icon-signout"></i></a></li>
           {% elif not 'django.contrib.auth.views.login' in request.view_name %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
@@ -71,7 +71,7 @@
     <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
-          {% include "common/main_navigation.html" %}
+          {% include "common/navigation_main.html" %}
         </div>
       </div>
       <div class="breadcrumbs">
