--- a/templates/common/navigation_main.html
+++ b/templates/common/navigation_main.html
@@ -11,13 +11,14 @@
 </ul>
 {% if user.is_admin %}
 <ul class="nav pull-right">
-  <li class="dropdown {% navactive request "admin_home_index admin_stock_index admin_stock_edit admin_market_index" %}">
+  <li class="dropdown {% navactive request "admin_home_index admin_stock_index admin_stock_edit admin_market_index admin_profile_index admin_profile_edit" %}">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
     <ul class="dropdown-menu pull-right">
       <li><a role="menuitem" tabindex="-1" href="{% url 'portfolioapp.apps.admin.views.home_index' %}">Dashboard</a></li>
       <li class="divider"></li>
       <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index' %}">Stocks</a></li>
       <li><a href="{% url 'portfolioapp.apps.admin.views.market_index' %}">Markets</a></li>
+      <li><a href="{% url 'portfolioapp.apps.admin.views.profile_index' %}">Users</a></li>
     </ul>
   </li>
 </ul>
