--- a/templates/dev/sample1.html
+++ b/templates/dev/sample1.html
@@ -126,4 +126,57 @@
     <p>Lorem ipsum dolor sit amet consectetuer pede tempor ligula sem tempus. A nascetur gravida parturient est Aenean facilisis In est consectetuer Nam. Adipiscing odio tincidunt ac ornare pellentesque metus diam laoreet sollicitudin vel.</p>
   </div>
 </div>
+
+<div class="widget widget-stats">
+  <div class="widget-body">
+    <div class="stats-row">
+      <div class="stats-label">
+        Portfolios
+      </div>
+      <div class="stats-value">
+        21
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="widget widget-stats">
+  <div class="widget-header">
+    <h4>Header</h4>
+  </div>
+  <div class="widget-body">
+    <div class="stats-row">
+      <div class="stats-label">
+        Portfolios
+      </div>
+      <div class="stats-value">
+        21
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="widget widget-stats">
+  <div class="widget-header">
+    <h4>Header</h4>
+  </div>
+  <div class="widget-body">
+    <div class="stats-row">
+      <div class="stats-label">
+        Portfolios
+      </div>
+      <div class="stats-value">
+        21
+      </div>
+    </div>
+    <div class="stats-row">
+      <div class="stats-label">
+        Portfolios
+      </div>
+      <div class="stats-value">
+        21
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock sidebar %}
