--- a/templates/admin/profiles/index.html
+++ b/templates/admin/profiles/index.html
@@ -13,8 +13,10 @@
 <table class="table table-striped table-striped-white table-hover table-bordered table-condensed table-clickable">
   <thead>
     <tr>
-      <th style="width: 50%;">Email</th>
-      <th style="width: 50%;">Name</th>
+      <th style="width: 40%;">Email</th>
+      <th style="width: 40%">Name</th>
+      <th style="width: 10%;">Role</th>
+      <th style="width: 10%;">Status</th>
     </tr>
   </thead>
   <tbody>
@@ -22,6 +24,8 @@
     <tr>
       <td><a href="{% url "admin_profile_edit" user.id %}">{{ user.email }}</a></td>
       <td>{{ user.full_name }}</td>
+      <td>{{ user.role }}</td>
+      <td>{{ user.status }}</td>
     </tr>
   {% endfor %}
   </tbody>
@@ -29,6 +33,24 @@
 {% endif %}
 
 {% endblock content %}
+
+{% block sidebar %}
+<div class="widget widget-stats">
+  <div class="widget-header">
+    <h4><i class="icon-bar-chart"></i> Stats</h4>
+  </div>
+  <div class="widget-body">
+    <div class="stats-row">
+      <div class="stats-label">
+        <i class="icon-group"></i> Users
+      </div>
+      <div class="stats-value">
+        {{ users|length }}
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock sidebar %}
 
 {% block script %}
 <script type="text/javascript">
