--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -72,7 +72,7 @@
 {% block sidebar %}
 <div class="widget widget-simple">
   <div class="widget-header">
-    <h3>Portfolio</h3>
+    <h3>Portfolio Makeup</h3>
   </div>
   <div class="widget-body">
     <div id="holdings-chart" style="height: 260px;"></div>
