--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -5,13 +5,12 @@
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; Portfolios{% endblock breadcrumbs %}
 
-{% block page_title %}Portfolios{% endblock page_title %}
+{% block page_title %}<i class="icon-folder-open-alt"></i> Portfolios{% endblock page_title %}
 
 {% block content %}
 
 {% if portfolios %}
 <table class="table table-striped table-striped-white table-hover table-condensed table-bordered table-clickable">
-  <caption>Current portfolios</caption>
   <thead>
     <tr>
       <th style="width: 50%;">Name</th>
@@ -44,7 +43,21 @@
 {% endblock content %}
 
 {% block sidebar %}
-Sidebar
+<div class="widget widget-stats">
+  <div class="widget-header">
+    <h4><i class="icon-info-sign"></i> Info</h4>
+  </div>
+  <div class="widget-body">
+    <div class="stats-row">
+      <div class="stats-label">
+        <i class="icon-folder-open-alt"></i> Portfolios
+      </div>
+      <div class="stats-value">
+        {{ portfolios|length }}
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock sidebar %}
 
 {% block script %}
