create portfolio using modal

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,8 @@ body {
 a,
 a:hover { color: #0198e1; }
 
+form { margin-bottom: 0px; }
+
 /********************************/
 /* HEADER
 /********************************/
