--- a/templates/portfolios/portfolios/create.html
+++ b/templates/portfolios/portfolios/create.html
@@ -29,3 +29,11 @@
 {% block sidebar %}
 Sidebar
 {% endblock sidebar %}
+
+{% block script %}
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#id_name').focus();
+    });
+</script>
+{% endblock script %}
