adding holding, almost there

--- a/templates/base_two_columns.html
+++ b/templates/base_two_columns.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="page-title">
       <h1>{% block page_title %}{% endblock page_title %}</h1>
-      <p>This is some helper text.</p>
+      <p>{% block helper_message %}This is some helper text.{% endblock helper_message %}</p>
     </div>
   </div>
 </header>
