--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -584,3 +584,6 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 /********************************/
 
 footer { font-size: 11px; }
+
+.tt-hint { width: 530px; }
+.tt-dropdown-menu { width: 540px; }
