--- a/templates/portfolios/holdings/create.html
+++ b/templates/portfolios/holdings/create.html
@@ -1,21 +1,19 @@
 {% extends "base_two_columns.html" %}
 
-{% block title %}Add a Holding{% endblock title %}
+{% block browser_title %}Add a Holding{% endblock browser_title %}
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'portfolio_index' %}">Portfolios</a> &rarr; <a href="{% url 'holding_index' portfolio.id %}">{{ portfolio.name }}</a> &rarr; Add a Holding{% endblock breadcrumbs %}
 
+{% block page_title %}<i class="icon-book"></i> Add a Holding{% endblock page_title %}
+
 {% block content %}
-
-<h1>Add a Holding</h1>
-
-<p>&nbsp;</p>
 
 <form method="post" action="" class="form-horizontal">
   {% csrf_token %}
   <div class="control-group">
     <label class="control-label" for="stocks">Stock: </label>
     <div class="controls">
-      <input id="stock_display" type="text" class="input-xxlarge" placeholder="examples: BlackBerry:TSX, Microsoft Corp:NASDAQ" />
+      <input id="stock_display" type="text" class="input-xxlarge" placeholder="" />
     </div>
   </div>
   <div class="control-group">
@@ -23,8 +21,6 @@
       <input type="submit" class="btn btn-primary" value="Add holding" />
     </div>
   </div>
-  <input type="hidden" id="{{ form.stock.auto_id }}" name="stock" value="" />
-  <input type="hidden" id="{{ form.portfolio.auto_id }}" name="portfolio" value="{{ portfolio.id }}" />
 </form>
 
 {% endblock content %}
@@ -34,5 +30,20 @@ Sidebar
 {% endblock sidebar %}
 
 {% block script %}
-<script src="{{ STATIC_URL }}js/holdings.js" type="text/javascript"></script>
+<link href="{{ STATIC_URL }}css/twitter/typeahead.css" rel="stylesheet" type="text/css" media="screen">
+<link href="{{ STATIC_URL }}css/twitter/typeahead.js-bootstrap.css" rel="stylesheet" type="text/css" media="screen">
+<script type="text/javascript" src="{{ STATIC_URL }}js/twitter/typeahead.js"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#stock_display').typeahead([
+            {
+                name: 'stocks',
+                remote: '/api/markets/stocks?q=%QUERY',
+                limit: 10
+            }
+        ]);
+
+        $('#stock_display').focus();
+    });
+</script>
 {% endblock script %}
