--- a/templates/portfolios/holdings/create.html
+++ b/templates/portfolios/holdings/create.html
@@ -11,7 +11,7 @@
 <form method="post" action="" class="form-horizontal">
   {% csrf_token %}
   <div class="control-group">
-    <label class="control-label" for="stocks">Stock: </label>
+    <label class="control-label" for="stock_display">Stock: </label>
     <div class="controls">
       <input id="stock_display" type="text" class="input-xxlarge" placeholder="" />
     </div>
