--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -5,20 +5,21 @@
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'portfolio_index' %}">Portfolios</a> &rarr; {{ portfolio.name }}{% endblock breadcrumbs %}
 
-{% block page_title %}<i class="icon-book"></i> Holdings <small><a href="{% url "holding_create" portfolio.id %}">add</a></small>{% endblock page_title %}
+{% block page_title %}<i class="icon-book"></i> Holdings <small><a href="{% url "holding_create" portfolio.id %}">add</a> <a href="#add_holding_modal" role="button" data-toggle="modal" id="add">add2</a></small>{% endblock page_title %}
 
 {% block content %}
 {% if holdings %}
-<table class="table table-striped table-striped-white table-hover table-bordered table-clickable">
+<table class="table table-striped table-striped-white table-hover table-bordered table-clickable table-options">
   <thead>
     <tr>
-      <th>Name</th>
-      <th class="align-right">Last Price</th>
-      <th class="align-right">Position</th>
-      <th class="align-right">Book Value<br /><span class="small">Avg Cost</span></th>
-      <th class="align-right">Market Value</th>
-      <th class="align-right">Net Gain</th>
-      <th class="align-right">Portfolio<br />Makeup</th>
+      <th style="width: 22%;">Name</th>
+      <th class="align-right" style="width: 17%;">Last Price</th>
+      <th class="align-right" style="width: 12%;">Position</th>
+      <th class="align-right" style="width: 12%;">Book Value<br /><span class="small">Avg Cost</span></th>
+      <th class="align-right" style="width: 12%;">Market Value</th>
+      <th class="align-right" style="width: 10%;">Net Gain</th>
+      <th class="align-right" style="width: 10%;">Portfolio<br />Makeup</th>
+      <th style="width: 5%">&nbsp;</th>
     </tr>
   </thead>
   <tbody>
@@ -43,6 +44,7 @@
         <span class="small">{{ holding.net_gain_percent|floatformat:2|intcomma }}%</span>
       </td>
       <td class="align-right"><span class="medium">{{ holding.portfolio_makeup_percent|floatformat:2 }}%</span></td>
+      <td class="row-options"><a href="#"><i class="icon-cog"></i></a></td>
     </tr>
   {% endfor %}
   </tbody>
@@ -60,12 +62,34 @@
       <th class="align-right"><strong>${{ holding_summary.total_market_value|floatformat:2|intcomma }}</strong></th>
       <th class="align-right"><strong>${{ holding_summary.total_net_gain_dollar|floatformat:2|intcomma }}</strong></th>
       <th class="align-right">100%</th>
+      <th class="align-right">&nbsp;</th>
     </tr>
   </tfoot>
 </table>
 {% else %}
 <p>You currently have no holdings in this portfolio - <a href="{% url 'holding_create' portfolio.id %}">go ahead and add some now!</a></p>
 {% endif %}
+
+<div id="add_holding_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <form method="post" action="">
+    {% csrf_token %}
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="myModalLabel">Add a Holding</h3>
+    </div>
+    <div class="modal-body">
+      <label class="control-label" for="stock_display">Stock: </label>
+      <div class="controls">
+        <input id="stock_display" type="text" class="input-xxlarge" placeholder="" />
+      </div>
+    </div>
+    <div class="modal-footer">
+      <input type="submit" class="btn btn-primary" value="Add holding" />
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    </div>
+    <input type="hidden" id="{{ form.stock.auto_id }}" name="{{ form.stock.html_name }}" value="">
+  </form>
+</div>
 
 {% endblock content %}
 
@@ -88,6 +112,10 @@
             if(href) {
                 window.location = href;
             }
+        });
+        $('table.table-clickable tbody tr .row-options').click(function(e){
+            e.stopPropagation();
+            alert("clicked");
         });
     });
 </script>
@@ -175,6 +203,6 @@ $(function () {
     });
 
 });
-
 </script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/holdings.js"></script>
 {% endblock script %}
